# Nexuszero-Protocol

./: .dockerignore  .env.example  .gitignore  .npmrc  00-MASTER-INITIALIZATION.md  ADVANCED_TOOL_USE_MASTER_PROMPT.md  AUTONOMY_POLICY.md  AVX2_REVERSION_REPORT.md  BENCHMARK_RESULTS.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_EXECUTIVE_SUMMARY.md  CONTRIBUTING.md  CONTRIBUTORS.md  CROSS_DOMAIN_INNOVATION_SYNTHESIS.md  CRYPTO_SECURITY_TODO.md  CT_DOT_PRODUCT_OPTIMIZATION_RESULTS.md  CURRENT_SPRINT.md  Cargo.toml  Comprehensive Gap Analysis.txt  DETAILED_CHANGELOG.md  DEVOPS_IMPLEMENTATION_SUMMARY.md  DUAL_EXPONENTIATION_COMPLETION_REPORT.md  DUAL_EXPONENTIATION_QUICK_REFERENCE.md  Dockerfile  E2E_TEST_REPORT.md  EXECUTIVE_SUMMARY_AND_ACTION_PLAN.md  GENESIS_BREAKTHROUGH_INNOVATIONS.md  GPU_PERFORMANCE_RESULTS.md  INNOVATION_MASTER_ACTION_PLAN.md  INNOVATION_ROADMAP.md  IP_NOTICE.md  LICENSE  MIGRATION_GUIDE.md  MPS_COMPRESSION_FIX.md  NEXT_STEPS_MASTER_ACTION_PLAN.md  NexusZero_Master_Copilot_Prompt.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_BENCHMARK_REPORT.md  PERFORMANCE_OPTIMIZATION_RESULTS.md  PERFORMANCE_TASKS_TODO.md  (+63 more)
chain_connectors/bitcoin/: Cargo.toml
chain_connectors/bitcoin/src/: config.rs  connector.rs  error.rs  lib.rs  psbt.rs  taproot.rs  utxo.rs
chain_connectors/common/: Cargo.toml
chain_connectors/common/benches/: chain_operations_bench.rs
chain_connectors/common/src/: error.rs  events.rs  (+3 more)
chain_connectors/cosmos/: Cargo.toml
chain_connectors/ethereum/: Cargo.toml
chain_connectors/polygon/: Cargo.toml
chain_connectors/solana/: Cargo.toml
frontend/cli/: Cargo.toml
nexuszero-crypto/: BENCHMARK_RESULTS.md  Cargo.toml  HARDWARE_SIDECHANNEL.md  OPTIMIZATION_ROADMAP.md  README.md  RING_LWE_IMPLEMENTATION.md  SECURITY.md  SESSION_1_SUMMARY.md  TASK_5_COMPLETION.md  TASK_5_STATUS.md  test_ffi.py  test_schnorr_math.py  test_witness.rs
nexuszero-crypto/audit_materials/: security_test_vectors.json
nexuszero-crypto/benches/: bulletproof_benchmarks.rs  comprehensive_benchmarks.rs  crypto_benchmarks.rs  ct_dot_product_bench.rs  gpu_acceleration_benchmarks.rs  micro_benchmarks.rs  nova_gpu_benchmarks.rs  nova_proving_benchmarks.rs  ntt_bench.rs  performance_optimization_benchmarks.rs  proof_benchmarks.rs  witness_manager_benchmarks.rs
nexuszero-crypto/coverage/: tarpaulin-report.html
nexuszero-crypto/docs/: FFI_EXAMPLES.json  integration_guide.md
nexuszero-crypto/examples/: benchmark_demo.rs  commitment_scheme.rs  confidential_transaction.rs  digital_signature.rs  encrypted_messaging.rs  generate_test_vectors.rs  parameter_selection.rs
nexuszero-crypto/python/: nexuszero_ffi.py
nexuszero-crypto/src/: benchmark.rs  ffi.rs  lib.rs  side_channel.rs  test_vectors.rs
nexuszero-crypto/tests/: adversarial_soundness_tests.rs  circuit_constraint_tests.rs  comprehensive_tests.proptest-regressions  comprehensive_tests.rs  coverage_push.rs  dual_exponentiation_tests.rs  e2e_proving_tests.rs  hardware_sidechannel_tests.rs  integration_tests.rs  nova_folding_tests.rs  ntt_extended_tests.rs  property_based_tests.rs  property_fuzz_comprehensive.proptest-regressions  property_fuzz_comprehensive.rs  property_timing_tests.proptest-regressions  property_timing_tests.rs  side_channel_tests.rs  test_vector_runner.rs  timing_tests.rs
nexuszero-holographic/: COMPRESSION_PERFORMANCE_REPORT.md  Cargo.toml  README.md  test_error.txt  test_output.txt
nexuszero-holographic/benches/: compression_bench.rs  mps_compression.rs
nexuszero-holographic/examples/: basic_compression.rs  benchmark_comparison.rs  integrate_with_crypto.rs  neural_compression.rs
nexuszero-holographic/src/: cli.rs  lib.rs
nexuszero-holographic/tests/: cli_integration.rs  compression_tests.proptest-regressions  compression_tests.rs  encoder_mapping_tests.rs  mps_compression_validation.rs  mps_decoder_extra_tests.rs  svd_tests.rs  tensor_tests.rs  utils_tests.rs
nexuszero-integration/: Cargo.toml
nexuszero-integration/benches/: integration_bench.rs
nexuszero-integration/config/: integration.toml
nexuszero-integration/examples/: basic_proof.rs  end_to_end_proof_generation.rs  soundness_verification.rs
nexuszero-integration/src/: api.rs  compression.rs  config.rs  lib.rs  metrics.rs  optimization.rs  pipeline.rs
nexuszero-integration/tests/: integration_tests.rs
nexuszero-optimizer/: .dockerignore  .gitignore  DELIVERY.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  NEURAL_OPTIMIZER_FEATURES.md  QUICKSTART.md  README.md  README_AGENTS.md  README_GRAPH.md  STATUS.md  TRAINING_PIPELINE.md  WEEK_2_VERIFICATION.md  baseline_config.yaml  config.yaml  optuna_study.db  pyproject.toml  requirements-agents.txt  requirements-graph.txt  requirements.txt  setup.py  test_installation.py
nexuszero-optimizer/checkpoints/: .gitkeep
nexuszero-optimizer/data/: test_training_data.json
nexuszero-optimizer/scripts/: create_config.py  demo_graph.py  demo_supervisor.py  evaluate.py  generate_50k_dataset.py  generate_dataset.py  inspect_dataset.py  test_imports.py  train.py  train_traced.py  tune_optuna.py  tune_ray.py  tune_wandb.py
nexuszero-optimizer/tests/: __init__.py  test_advanced_gnn.py  test_advanced_tool_use.py  test_config.py  test_crypto_bridge.py  test_dataset.py  test_graph_query.py  test_models.py  test_ray_tune.py  test_soundness.py  test_tracing.py  test_trainer.py  test_tuner.py
privacy_morphing/: Cargo.toml
privacy_morphing/src/: anonymity.rs  compliance.rs  config.rs  engine.rs  error.rs  lib.rs  schedule.rs  types.rs
proof_network/coordinator/: Cargo.toml
proof_network/marketplace/: Cargo.toml
proof_network/prover_node/: Cargo.toml
sdks/python/: README.md  pyproject.toml
sdks/rust/: Cargo.toml  README.md
services/api_gateway/: Cargo.toml
services/bridge_service/: Cargo.toml
services/compliance_service/: Cargo.toml
services/privacy_service/: Cargo.toml
services/transaction_service/: Cargo.toml
shared/nexuszero-common/: Cargo.toml
shared/nexuszero-crypto-lib/: Cargo.toml
shared/nexuszero-db/: Cargo.toml
tests/nexuszero-e2e/: Cargo.toml
(+630 files in other folders)
