[workspace]
resolver = "2"
members = [
    # Core cryptographic libraries
    "nexuszero-crypto",
    "nexuszero-holographic",
    "nexuszero-integration",
    
    # Shared libraries
    "shared/nexuszero-common",
    "shared/nexuszero-crypto-lib",
    "shared/nexuszero-db",
    
    # Microservices - Phase 1
    "services/api_gateway",
    "services/transaction_service",
    "services/privacy_service",
    "services/compliance_service",
    "services/bridge_service",
    
    # Blockchain Connectors - Phase 2
    "chain_connectors/common",
    "chain_connectors/ethereum",
    "chain_connectors/bitcoin",
    "chain_connectors/solana",
    "chain_connectors/polygon",
    "chain_connectors/cosmos",
    
    # Proof Network - Phase 3
    "proof_network/prover_node",
    "proof_network/marketplace",
    "proof_network/coordinator",
    
    # SDKs - Phase 4
    "sdks/rust",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["NexusZero Protocol Team"]
license = "MIT"
repository = "https://github.com/iamthegreatdestroyer/Nexuszero-Protocol"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full", "tracing"] }

# Web framework
axum = { version = "0.7", features = ["tracing"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "timeout"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "rust_decimal"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Cryptography
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
validator = { version = "0.18", features = ["derive"] }
rust_decimal = { version = "1.36", features = ["serde"] }

# Metrics
prometheus = "0.13"
lazy_static = "1.5"

# Async traits
async-trait = "0.1"
futures = "0.3"

# Blockchain dependencies - Phase 2
# Ethereum
alloy = { version = "0.1", features = ["full"] }

# Bitcoin
bitcoin = { version = "0.32", features = ["serde", "base64"] }
bitcoincore-rpc = "0.19"

# Serialization
borsh = "1.5"
base64 = "0.22"

# Cosmos
cosmrs = { version = "0.16", features = ["cosmwasm", "grpc"] }
tendermint = "0.35"
tendermint-rpc = { version = "0.35", features = ["http-client", "websocket-client"] }

# gRPC
tonic = "0.11"
prost = "0.12"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Time (fix version conflicts - 0.3.36+ fixes Rust 1.80+ compatibility)
time = { version = "0.3.36", features = ["formatting", "parsing", "macros"] }
