[package]
name = "nexuszero-crypto"
version = "0.1.0"
edition = "2021"
authors = ["Steve <iamthegreatdestroyer@github.com>"]
description = "Quantum-resistant zero-knowledge proof system based on lattice cryptography"
license = "MIT"
repository = "https://github.com/iamthegreatdestroyer/Nexuszero-Protocol"
keywords = ["cryptography", "zero-knowledge", "lattice", "post-quantum", "zkp"]
categories = ["cryptography", "mathematics"]

[dependencies]
# Matrix operations for lattice computations
ndarray = "0.15"

# Random number generation
rand = "0.8"

# Hashing for Fiat-Shamir transform
sha3 = "0.10"
sha2 = "0.10"

# Large integer arithmetic
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Memory security
zeroize = { version = "1.7", features = ["derive"] }

# Error handling
thiserror = "1.0"

[dev-dependencies]
# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Property-based testing
proptest = "1.4"

# Test utilities
hex = "0.4"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
debug = false

[[bench]]
name = "crypto_benchmarks"
harness = false

[[bench]]
name = "comprehensive_benchmarks"
harness = false

[lib]
name = "nexuszero_crypto"
path = "src/lib.rs"
