[package]
name = "nexuszero-crypto"
version = "0.1.0"
edition = "2021"
authors = ["NexusZero Protocol Team <team@nexuszero.io>"]
description = "Quantum-resistant zero-knowledge proof system based on lattice cryptography"
license = "AGPL-3.0-or-later"
repository = "https://github.com/iamthegreatdestroyer/Nexuszero-Protocol"
homepage = "https://nexuszero.io"
documentation = "https://docs.nexuszero.io"
keywords = ["cryptography", "zero-knowledge", "lattice", "post-quantum", "zkp"]
categories = ["cryptography", "mathematics"]

[dependencies]
# Matrix operations for lattice computations
ndarray = "0.15"

# Random number generation
rand = "0.8"

# Hashing for Fiat-Shamir transform
sha3 = "0.10"
sha2 = "0.10"
blake3 = "1.5"

# Large integer arithmetic
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Memory security
zeroize = { version = "1.7", features = ["derive"] }

# Constant-time operations
subtle = "2.5"

# Error handling
thiserror = "1.0"

# Logging
log = "0.4"
anyhow = "1.0"

# Iterator utilities for batch verification
itertools = "0.12"

# Parallel iteration
rayon = "1.10"

# LRU cache for witness management
lru = "0.12"

# Nova folding scheme for IVC/PCD proofs
nova-snark = { version = "0.37", optional = true }
pasta_curves = { version = "0.5", optional = true }
bellpepper-core = { version = "0.4", optional = true }
bellpepper = { version = "0.4", optional = true }
ff = { version = "0.13", optional = true }

# Async runtime
tokio = { version = "1.0", features = ["sync", "macros", "rt-multi-thread", "time"] }

# Futures utilities
futures = "0.3"

# Async traits
async-trait = "0.1"

# Lazy static for global registries
lazy_static = "1.4"

# Metrics and monitoring
prometheus = "0.13"
hyper = { version = "0.14", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Hardware acceleration
wgpu = { version = "0.19", optional = true }
pollster = { version = "0.3", optional = true }
bytemuck = { version = "1.14", optional = true }

# HTTP client for distributed verification
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
# Benchmarking
criterion = { version = "0.5", features = ["html_reports", "async_futures"] }

# Property-based testing
proptest = "1.4"

# Test utilities
hex = "0.4"
rand_chacha = "0.3"

# Async runtime for tests
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
debug = false

[[bench]]
name = "crypto_benchmarks"
harness = false

[[bench]]
name = "comprehensive_benchmarks"
harness = false

[[bench]]
name = "proof_benchmarks"
harness = false

[[bench]]
name = "bulletproof_benchmarks"
harness = false

[[bench]]
name = "ntt_bench"
harness = false

[[bench]]
name = "witness_manager_benchmarks"
harness = false

[[bench]]
name = "performance_optimization_benchmarks"
harness = false

[[bench]]
name = "gpu_acceleration_benchmarks"
harness = false

[features]
default = ["lazy_static"]
simd = []
avx2 = ["simd"]
neon = ["simd"]
avx512 = ["simd"]
allow-insecure = []
lazy_static = []
hardware-acceleration = ["wgpu", "pollster"]
gpu = ["hardware-acceleration", "bytemuck"]
tpu = ["hardware-acceleration"]
# Nova folding scheme feature flag
nova = ["nova-snark", "pasta_curves", "bellpepper-core", "bellpepper", "ff"]

[lib]
name = "nexuszero_crypto"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]
