[package]
name = "nexuszero-holographic"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = { version = "0.15", features = ["rayon", "serde"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rayon = "1.7"
num-complex = "0.4"
thiserror = "1.0"
nexuszero-crypto = { path = "../nexuszero-crypto" }
rand = "0.8"

[dev-dependencies]
criterion = "0.5"
tomlcriterion = { version = "0.5", features = ["html_reports"] }
zstd = "0.13"
brotli = "3.4"
lz4 = "1.24"
approx = "0.5"
proptest = "1.0"
rand = "0.8"
