[package]
name = "nexuszero-holographic"
version = "0.1.0"
edition = "2021"

[features]
default = []
# Neural enhancement requires LibTorch to be installed
# Install: https://pytorch.org/get-started/locally/
# Set LIBTORCH env var to installation path
neural = ["tch"]

[dependencies]
ndarray = { version = "0.15", features = ["rayon", "serde"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rayon = "1.7"
num-complex = "0.4"
thiserror = "1.0"
nexuszero-crypto = { path = "../nexuszero-crypto" }
rand = "0.8"
lz4 = "1.24"
zstd = "0.13"

# Optional: PyTorch bindings for neural enhancement
tch = { version = "0.17", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
brotli = "3.4"
approx = "0.5"
proptest = "1.0"
rand = "0.8"

[[bench]]
name = "compression_bench"
harness = false
