[package]
name = "nexuszero-integration"
version = "0.1.0"
edition = "2021"
description = "End-to-end integration layer combining crypto, optimizer, and holographic compression"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
rand = "0.8"
# Internal crates
nexuszero_crypto = { path = "../nexuszero-crypto", package = "nexuszero-crypto" }
nexuszero_holographic = { path = "../nexuszero-holographic", package = "nexuszero-holographic" }

[dev-dependencies]
serde_json = "1.0"
sha3 = "0.10"
num-bigint = "0.4"

[lib]
name = "nexuszero_integration"
path = "src/lib.rs"
