[package]
name = "nexuszero-privacy-morphing"
version = "0.1.0"
edition = "2021"
authors = ["NexusZero Team"]
description = "Adaptive Privacy Morphing (APM) Engine for NexusZero Protocol"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nexuszero/nexuszero-protocol"
keywords = ["privacy", "zkp", "morphing", "blockchain"]
categories = ["cryptography"]

[dependencies]
# Core
tokio = { version = "1.34", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto
rand = "0.8"
sha2 = "0.10"
blake3 = "1.5"
curve25519-dalek = { version = "4.1", features = ["serde"] }
ed25519-dalek = { version = "2.1", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
hex = "0.4"
base64 = "0.21"
uuid = { version = "1.6", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.4"

[lib]
name = "nexuszero_privacy_morphing"
path = "src/lib.rs"
