[package]
name = "chain-connectors-bitcoin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Bitcoin blockchain connector for NexusZero Protocol"

[dependencies]
# Common interface
chain-connectors-common = { path = "../common" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Bitcoin
bitcoin = { version = "0.32", features = ["serde", "rand-std", "base64"] }
bitcoincore-rpc = "0.19"
miniscript = { version = "12", features = ["serde"] }
base64 = "0.21"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
hex = "0.4"
bytes = "1.5"
sha2 = "0.10"

[dev-dependencies]
tokio-test = "0.4"
