[package]
name = "chain-connectors-solana"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Solana blockchain connector for NexusZero Protocol"

[dependencies]
# Common interface
chain-connectors-common = { path = "../common" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# HTTP client for RPC
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
borsh = "1.5"
bincode = "1.3"

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
hex = "0.4"
bytes = "1.5"
bs58 = "0.5"
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"
