[package]
name = "nexuszero-cli"
version = "0.1.0"
edition = "2021"
authors = ["NexusZero Team"]
description = "Command-line interface for NexusZero privacy-preserving transactions"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nexuszero/nexuszero-protocol"
keywords = ["privacy", "zkp", "crypto", "blockchain", "cli"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
# CLI Framework
clap = { version = "4.4", features = ["derive", "env", "color"] }

# Async Runtime
tokio = { version = "1.34", features = ["full"] }

# HTTP Client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Crypto
hex = "0.4"
base64 = "0.22"
getrandom = "0.3"

# Terminal UI
colored = "2.1"
indicatif = { version = "0.17", features = ["tokio"] }
dialoguer = "0.11"
console = "0.15"

# Config
config = "0.13"
dirs = "5.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Wallet Integration
ethers = { version = "2.0", features = ["rustls", "ws"] }
bip39 = "2.0"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "nexuszero"
path = "src/main.rs"
