[package]
name = "proof_network-coordinator"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"

[lib]
name = "coordinator"
path = "src/lib.rs"

[dev-dependencies]
# For integration tests
reqwest = { version = "0.11", features = ["json"] }
tower = "0.5"

