[package]
name = "proof_network-prover-node"
version = "0.1.0"
edition = "2021"
authors = ["NexusZero Team"]
description = "Prover node for NexusZero DPGN"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "sync", "time"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
tracing = "0.1"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = "1.0"
async-trait = "0.1"

# Use workspace crate if available
nexuszero-crypto = { path = "../../nexuszero-crypto" }

[dev-dependencies]
# Test helpers
serde_yaml = "0.9"

[lib]
name = "prover_node"
path = "src/lib.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
