[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexuszero"
version = "0.1.0"
description = "NexusZero Protocol Python SDK - Privacy-preserving transactions with quantum-resistant ZK proofs"
readme = "README.md"
license = "AGPL-3.0-or-later"
authors = [
    { name = "NexusZero Team", email = "team@nexuszero.io" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["zero-knowledge", "privacy", "blockchain", "cryptography", "quantum-resistant"]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "typing-extensions>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "ruff>=0.1.6",
    "respx>=0.20.0",
]

[project.urls]
Homepage = "https://nexuszero.io"
Documentation = "https://docs.nexuszero.io/python"
Repository = "https://github.com/iamthegreatdestroyer/Nexuszero-Protocol"
Issues = "https://github.com/iamthegreatdestroyer/Nexuszero-Protocol/issues"

[tool.hatch.build.targets.wheel]
packages = ["nexuszero"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
