[package]
name = "nexuszero-api-gateway"
version = "0.1.0"
edition = "2021"
authors = ["NexusZero Protocol Team <team@nexuszero.io>"]
description = "High-performance API Gateway for NexusZero Protocol"
license = "AGPL-3.0-or-later"
repository = "https://github.com/iamthegreatdestroyer/Nexuszero-Protocol"
homepage = "https://nexuszero.io"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros", "ws"] }
tokio = { version = "1.35", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "request-id", "util"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9.2"

# Database
sqlx = { workspace = true }
redis = { workspace = true }

# Cryptography
sha2.workspace = true
base64 = "0.22"
hex.workspace = true

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }
config = "0.14"
dotenvy = "0.15"
lazy_static = "1.5"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Async
async-trait = "0.1"
futures = "0.3"

# HTTP Client (for service-to-service communication)
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Rate Limiting
governor = "0.6"

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.11", features = ["json"] }
tower = { version = "0.4", features = ["util"] }
axum-test = "14"

[[bin]]
name = "nexuszero-gateway"
path = "src/main.rs"
