[package]
name = "nexuszero-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async
tokio = { workspace = true }

# Utils
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
hex = "0.4"
base64 = "0.22"

# Tracing
tracing = { workspace = true }

# Validation
validator = { version = "0.18", features = ["derive"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
